@@ -575,18 +575,16 @@ fadestate = 0
 fadeto red, green, blue
 END SUB
 
-SUB getui (f$)
+SUB getui (colarray(), palnum)
 'load ui colors from data lump
 '(lump not finalised, just set defaults for now)
 
 RESTORE defaultui
 FOR i=0 TO uiColors
  READ col%
- uilook(i) = col%
+ colarray(i) = col%
 NEXT
 
-'The QB editor moves this data to the top, but QB still compiles fine
-'with it here.
 defaultui:
 DATA 0,7,8,14,15,6,7,1,2,18,21,35,37,15,240,10,14,240
 DATA 18,28,34,44,50,60,66,76,82,92,98,108,114,124,130,140
