@@ -12,7 +12,7 @@ DECLARE SUB fadeout (red%, green%, blue%)
 DECLARE FUNCTION usemenu (pt%, top%, first%, last%, size%)
 DECLARE SUB debug (s$)
 DECLARE FUNCTION soundfile$ (sfxnum%)
-DECLARE SUB getui(f$)
+DECLARE SUB getui(colarray(), palnum = -1)
 DECLARE SUB safekill (f$)
 DECLARE FUNCTION getfixbit(bitnum AS INTEGER) AS INTEGER
 DECLARE SUB setfixbit(bitnum AS INTEGER, bitval AS INTEGER)
